# mathsense-gcal-import

./: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
src/mathsense_gcal_import/: console.py  gcal.py
tests/: test_console.py  test_gcal.py
