[tool.poetry]
name = "mathsense-gcal-import"
version = "0.1.0"
description = "A project for importing a mathsense schedule to gcal through web scraping"
authors = ["nluongo <nluongo@gmail.com>"]
readme = "README.md"
packages = [{include = "mathsense_gcal_import", from = "src"}]
license = "MIT"
homepage = "https://github.com/nluongo/mathsense-gcal-import"
repository = "https://github.com/nluongo/mathsense-gcal-import"
keywords = ["mathsense"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
google = "^3.0.0"
google-api-python-client = "^2.65.0"
google-auth-oauthlib = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mathsense-gcal-import = "mathsense_gcal_import.console:main"
mathsense-gcal-tester = "mathsense_gcal_import.console:main"
